--- a/translations/login+intl-icu.en.xlf
+++ b/translations/login+intl-icu.en.xlf
@@ -7,7 +7,7 @@
       </notes>
       <segment>
         <source>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Your name must be at least {{ limit }} characters long.</target>
+        <target>Your name must be at least { limit } characters long.</target>
       </segment>
     </unit>
     <unit id="ouF_pon" name="Dein Name kann höchstens {{ limit }} Zeichen umfassen.">
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</source>
-        <target>Your name may only have {{ limit }} characters at most.</target>
+        <target>Your name may only have { limit } characters at most.</target>
       </segment>
     </unit>
     <unit id="WvW8_JI" name="Die eingegebene E-Mail Adresse ist nicht gültig.">
@@ -43,7 +43,7 @@
       </notes>
       <segment>
         <source>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Your password must be at least {{ limit }} characters long.</target>
+        <target>Your password must be at least { limit } characters long.</target>
       </segment>
     </unit>
     <unit id="OK9eVbg" name="Die eingegebenen Passwörter stimmen nicht überein.">
@@ -61,7 +61,7 @@
       </notes>
       <segment>
         <source>Der Validierungscode muss {{ limit }} Zeichen umfassen.</source>
-        <target>The verification code must contain {{ limit }} characters.</target>
+        <target>The verification code must contain { limit } characters.</target>
       </segment>
     </unit>
     <unit id="0f1ZNLd" name="Der angegebene Validierungscode ist nicht gültig.">
