--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -7,7 +7,7 @@
       </notes>
       <segment>
         <source>Dein Name muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Tu nombre debe tener al menos {{ limit }} caracteres.</target>
+        <target>Tu nombre debe tener al menos { limit } caracteres.</target>
       </segment>
     </unit>
     <unit id="ouF_pon" name="Dein Name kann höchstens {{ limit }} Zeichen umfassen.">
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>Dein Name kann höchstens {{ limit }} Zeichen umfassen.</source>
-        <target>Tu nombre solo puede tener hasta {{ limit }} caracteres.</target>
+        <target>Tu nombre solo puede tener hasta { limit } caracteres.</target>
       </segment>
     </unit>
     <unit id="WvW8_JI" name="Die eingegebene E-Mail Adresse ist nicht gültig.">
@@ -43,7 +43,7 @@
       </notes>
       <segment>
         <source>Dein Passwort muss mindestens {{ limit }} Zeichen umfassen.</source>
-        <target>Tu contraseña debe tener al menos {{ limit }} caracteres.</target>
+        <target>Tu contraseña debe tener al menos { limit } caracteres.</target>
       </segment>
     </unit>
     <unit id="OK9eVbg" name="Die eingegebenen Passwörter stimmen nicht überein.">
@@ -61,7 +61,7 @@
       </notes>
       <segment>
         <source>Der Validierungscode muss {{ limit }} Zeichen umfassen.</source>
-        <target>El código de verificación debe tener {{ limit }} caracteres.</target>
+        <target>El código de verificación debe tener { limit } caracteres.</target>
       </segment>
     </unit>
     <unit id="0f1ZNLd" name="Der angegebene Validierungscode ist nicht gültig.">
