--- a/translations/validators+intl-icu.de.xlf
+++ b/translations/validators+intl-icu.de.xlf
@@ -21,11 +21,11 @@
     </unit>
     <unit id="OjM_kpf" name="This value should be of type {{ type }}.">
       <notes>
-        <note category="german">Dieser Wert sollte vom Typ {{ type }} sein.</note>
+        <note category="german">Dieser Wert sollte vom Typ { type } sein.</note>
       </notes>
       <segment>
         <source>This value should be of type {{ type }}.</source>
-        <target>Dieser Wert sollte vom Typ {{ type }} sein.</target>
+        <target>Dieser Wert sollte vom Typ { type } sein.</target>
       </segment>
     </unit>
     <unit id="f0P5pBD" name="This value should be blank.">
@@ -51,7 +51,7 @@
         <note category="german">Sie müssen mindestens {{ limit }} Möglichkeit wählen.|Sie müssen mindestens {{ limit }} Möglichkeiten wählen.</note>
       </notes>
       <segment>
-        <source>You must select at least {{ limit }} choice.|You must select at least {{ limit }} choices.</source>
+        <source>You must select at least { limit } choice.|You must select at least { limit } choices.</source>
         <target>Sie müssen mindestens {{ limit }} Möglichkeit wählen.|Sie müssen mindestens {{ limit }} Möglichkeiten wählen.</target>
       </segment>
     </unit>
@@ -60,7 +60,7 @@
         <note category="german">Sie dürfen höchstens {{ limit }} Möglichkeit wählen.|Sie dürfen höchstens {{ limit }} Möglichkeiten wählen.</note>
       </notes>
       <segment>
-        <source>You must select at most {{ limit }} choice.|You must select at most {{ limit }} choices.</source>
+        <source>You must select at most { limit } choice.|You must select at most { limit } choices.</source>
         <target>Sie dürfen höchstens {{ limit }} Möglichkeit wählen.|Sie dürfen höchstens {{ limit }} Möglichkeiten wählen.</target>
       </segment>
     </unit>
@@ -154,13 +154,13 @@
         <target>Der Dateityp ist ungültig ({{ type }}). Erlaubte Dateitypen sind {{ types }}.</target>
       </segment>
     </unit>
-    <unit id="NubOmrs" name="This value should be {{ limit }} or less.">
+    <unit id="NubOmrs" name="This value should be { limit } or less.">
       <notes>
-        <note category="german">Dieser Wert sollte kleiner oder gleich {{ limit }} sein.</note>
+        <note category="german">Dieser Wert sollte kleiner oder gleich { limit } sein.</note>
       </notes>
       <segment>
-        <source>This value should be {{ limit }} or less.</source>
-        <target>Dieser Wert sollte kleiner oder gleich {{ limit }} sein.</target>
+        <source>This value should be { limit } or less.</source>
+        <target>Dieser Wert sollte kleiner oder gleich { limit } sein.</target>
       </segment>
     </unit>
     <unit id="HX7TOFm">
@@ -168,17 +168,17 @@
         <note category="german">Diese Zeichenkette ist zu lang. Sie sollte höchstens {{ limit }} Zeichen haben.|Diese Zeichenkette ist zu lang. Sie sollte höchstens {{ limit }} Zeichen haben.</note>
       </notes>
       <segment>
-        <source>This value is too long. It should have {{ limit }} character or less.|This value is too long. It should have {{ limit }} characters or less.</source>
+        <source>This value is too long. It should have { limit } character or less.|This value is too long. It should have { limit } characters or less.</source>
         <target>Diese Zeichenkette ist zu lang. Sie sollte höchstens {{ limit }} Zeichen haben.|Diese Zeichenkette ist zu lang. Sie sollte höchstens {{ limit }} Zeichen haben.</target>
       </segment>
     </unit>
-    <unit id="qgR8M_U" name="This value should be {{ limit }} or more.">
+    <unit id="qgR8M_U" name="This value should be { limit } or more.">
       <notes>
-        <note category="german">Dieser Wert sollte größer oder gleich {{ limit }} sein.</note>
+        <note category="german">Dieser Wert sollte größer oder gleich { limit } sein.</note>
       </notes>
       <segment>
-        <source>This value should be {{ limit }} or more.</source>
-        <target>Dieser Wert sollte größer oder gleich {{ limit }} sein.</target>
+        <source>This value should be { limit } or more.</source>
+        <target>Dieser Wert sollte größer oder gleich { limit } sein.</target>
       </segment>
     </unit>
     <unit id="ekfrU.c">
@@ -186,7 +186,7 @@
         <note category="german">Diese Zeichenkette ist zu kurz. Sie sollte mindestens {{ limit }} Zeichen haben.|Diese Zeichenkette ist zu kurz. Sie sollte mindestens {{ limit }} Zeichen haben.</note>
       </notes>
       <segment>
-        <source>This value is too short. It should have {{ limit }} character or more.|This value is too short. It should have {{ limit }} characters or more.</source>
+        <source>This value is too short. It should have { limit } character or more.|This value is too short. It should have { limit } characters or more.</source>
         <target>Diese Zeichenkette ist zu kurz. Sie sollte mindestens {{ limit }} Zeichen haben.|Diese Zeichenkette ist zu kurz. Sie sollte mindestens {{ limit }} Zeichen haben.</target>
       </segment>
     </unit>
@@ -402,7 +402,7 @@
         <note category="german">Dieser Wert sollte genau {{ limit }} Zeichen lang sein.|Dieser Wert sollte genau {{ limit }} Zeichen lang sein.</note>
       </notes>
       <segment>
-        <source>This value should have exactly {{ limit }} character.|This value should have exactly {{ limit }} characters.</source>
+        <source>This value should have exactly { limit } character.|This value should have exactly { limit } characters.</source>
         <target>Dieser Wert sollte genau {{ limit }} Zeichen lang sein.|Dieser Wert sollte genau {{ limit }} Zeichen lang sein.</target>
       </segment>
     </unit>
@@ -453,20 +453,20 @@
     </unit>
     <unit id="gTJYRl6">
       <notes>
-        <note category="german">Diese Sammlung sollte {{ limit }} oder mehr Elemente beinhalten.|Diese Sammlung sollte {{ limit }} oder mehr Elemente beinhalten.</note>
+        <note category="german">Diese Sammlung sollte { limit } oder mehr Elemente beinhalten.|Diese Sammlung sollte { limit } oder mehr Elemente beinhalten.</note>
       </notes>
       <segment>
-        <source>This collection should contain {{ limit }} element or more.|This collection should contain {{ limit }} elements or more.</source>
-        <target>Diese Sammlung sollte {{ limit }} oder mehr Elemente beinhalten.|Diese Sammlung sollte {{ limit }} oder mehr Elemente beinhalten.</target>
+        <source>This collection should contain { limit } element or more.|This collection should contain { limit } elements or more.</source>
+        <target>Diese Sammlung sollte { limit } oder mehr Elemente beinhalten.|Diese Sammlung sollte { limit } oder mehr Elemente beinhalten.</target>
       </segment>
     </unit>
     <unit id="FFn3lVn">
       <notes>
-        <note category="german">Diese Sammlung sollte {{ limit }} oder weniger Elemente beinhalten.|Diese Sammlung sollte {{ limit }} oder weniger Elemente beinhalten.</note>
+        <note category="german">Diese Sammlung sollte { limit } oder weniger Elemente beinhalten.|Diese Sammlung sollte { limit } oder weniger Elemente beinhalten.</note>
       </notes>
       <segment>
-        <source>This collection should contain {{ limit }} element or less.|This collection should contain {{ limit }} elements or less.</source>
-        <target>Diese Sammlung sollte {{ limit }} oder weniger Elemente beinhalten.|Diese Sammlung sollte {{ limit }} oder weniger Elemente beinhalten.</target>
+        <source>This collection should contain { limit } element or less.|This collection should contain { limit } elements or less.</source>
+        <target>Diese Sammlung sollte { limit } oder weniger Elemente beinhalten.|Diese Sammlung sollte { limit } oder weniger Elemente beinhalten.</target>
       </segment>
     </unit>
     <unit id="bSdilZv">
@@ -474,7 +474,7 @@
         <note category="german">Diese Sammlung sollte genau {{ limit }} Element beinhalten.|Diese Sammlung sollte genau {{ limit }} Elemente beinhalten.</note>
       </notes>
       <segment>
-        <source>This collection should contain exactly {{ limit }} element.|This collection should contain exactly {{ limit }} elements.</source>
+        <source>This collection should contain exactly { limit } element.|This collection should contain exactly { limit } elements.</source>
         <target>Diese Sammlung sollte genau {{ limit }} Element beinhalten.|Diese Sammlung sollte genau {{ limit }} Elemente beinhalten.</target>
       </segment>
     </unit>
@@ -552,29 +552,29 @@
     </unit>
     <unit id="c.WxzFW" name="This value should be equal to {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte gleich {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte gleich { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be equal to {{ compared_value }}.</source>
-        <target>Dieser Wert sollte gleich {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte gleich { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="_jdjkwq" name="This value should be greater than {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte größer als {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte größer als { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be greater than {{ compared_value }}.</source>
-        <target>Dieser Wert sollte größer als {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte größer als { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="o8A8a0H" name="This value should be greater than or equal to {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte größer oder gleich {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte größer oder gleich { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be greater than or equal to {{ compared_value }}.</source>
-        <target>Dieser Wert sollte größer oder gleich {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte größer oder gleich { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="bOF1fpm">
@@ -588,29 +588,29 @@
     </unit>
     <unit id="jG0QFKw" name="This value should be less than {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte kleiner als {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte kleiner als { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be less than {{ compared_value }}.</source>
-        <target>Dieser Wert sollte kleiner als {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte kleiner als { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="9lWrKmm" name="This value should be less than or equal to {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte kleiner oder gleich {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte kleiner oder gleich { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be less than or equal to {{ compared_value }}.</source>
-        <target>Dieser Wert sollte kleiner oder gleich {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte kleiner oder gleich { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="ftTwGs." name="This value should not be equal to {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte nicht {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte nicht { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should not be equal to {{ compared_value }}.</source>
-        <target>Dieser Wert sollte nicht {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte nicht { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="Bi22JLt">
@@ -685,12 +685,12 @@
         <target>Der Hostname konnte nicht aufgelöst werden.</target>
       </segment>
     </unit>
-    <unit id="NtzKvgt" name="This value does not match the expected {{ charset }} charset.">
+    <unit id="NtzKvgt" name="This value does not match the expected { charset } charset.">
       <notes>
         <note category="german">Dieser Wert entspricht nicht dem erwarteten Zeichensatz {{ charset }}.</note>
       </notes>
       <segment>
-        <source>This value does not match the expected {{ charset }} charset.</source>
+        <source>This value does not match the expected { charset } charset.</source>
         <target>Dieser Wert entspricht nicht dem erwarteten Zeichensatz {{ charset }}.</target>
       </segment>
     </unit>
@@ -723,11 +723,11 @@
     </unit>
     <unit id="ru.4wkH" name="This value should be a multiple of {{ compared_value }}.">
       <notes>
-        <note category="german">Dieser Wert sollte ein Vielfaches von {{ compared_value }} sein.</note>
+        <note category="german">Dieser Wert sollte ein Vielfaches von { compared_value } sein.</note>
       </notes>
       <segment>
         <source>This value should be a multiple of {{ compared_value }}.</source>
-        <target>Dieser Wert sollte ein Vielfaches von {{ compared_value }} sein.</target>
+        <target>Dieser Wert sollte ein Vielfaches von { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="M3vyK6s" name="This Business Identifier Code (BIC) is not associated with IBAN {{ iban }}.">
@@ -811,13 +811,13 @@
         <target>Dieses Passwort ist Teil eines Datenlecks, es darf nicht verwendet werden.</target>
       </segment>
     </unit>
-    <unit id="VvxxWas" name="This value should be between {{ min }} and {{ max }}.">
+    <unit id="VvxxWas" name="This value should be between { min } and {{ max }}.">
       <notes>
-        <note category="german">Dieser Wert sollte zwischen {{ min }} und {{ max }} sein.</note>
+        <note category="german">Dieser Wert sollte zwischen { min } und {{ max }} sein.</note>
       </notes>
       <segment>
-        <source>This value should be between {{ min }} and {{ max }}.</source>
-        <target>Dieser Wert sollte zwischen {{ min }} und {{ max }} sein.</target>
+        <source>This value should be between { min } and {{ max }}.</source>
+        <target>Dieser Wert sollte zwischen { min } und {{ max }} sein.</target>
       </segment>
     </unit>
     <unit id="7g313cV" name="This value is not a valid hostname.">
@@ -831,11 +831,11 @@
     </unit>
     <unit id="xwtBimR">
       <notes>
-        <note category="german">Die Anzahl an Elementen in dieser Sammlung sollte ein Vielfaches von {{ compared_value }} sein.</note>
+        <note category="german">Die Anzahl an Elementen in dieser Sammlung sollte ein Vielfaches von { compared_value } sein.</note>
       </notes>
       <segment>
         <source>The number of elements in this collection should be a multiple of {{ compared_value }}.</source>
-        <target>Die Anzahl an Elementen in dieser Sammlung sollte ein Vielfaches von {{ compared_value }} sein.</target>
+        <target>Die Anzahl an Elementen in dieser Sammlung sollte ein Vielfaches von { compared_value } sein.</target>
       </segment>
     </unit>
     <unit id="FDRZr.s" name="This value should satisfy at least one of the following constraints:">
